[package]
name = "geo-buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo-types = "0.7.9"
geo = "0.24.1"

[dev-dependencies]
geo-svg = "0.5.0"
geo-offset = "0.3.0"
clang-sys = "1.6.1"
wkt = "0.10.3"
