[package]
name = "geo-buffer"
version = "0.2.0"
description = "This crate provides methods to buffer (to inflate or deflate) certain primitive geometric types in the GeoRust ecosystem via a straight skeleton."
edition = "2021"
authors = ["Teneleven Corp<1011@1011.co.kr>", "Inseop Youn<pinebananais@gmail.com>"]
keyword =  ["polygon-buffer", "polygon-offset", "straight-skeleton", "polygon-setback", "padding-polygon"]
categories = ["algorithms", "graphics", "mathematics", "multimedia::images"]
license = "Apache-2.0"
repository = "https://github.com/1011-git/geo-buffer"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo-types = "0.7.9"
geo = "0.24.1"

[dev-dependencies]
geo-svg = "0.5.0"
wkt = "0.10.3"
